--- a/apps/web/src/app/themes/page.module.css
+++ b/apps/web/src/app/themes/page.module.css
@@ -68,6 +68,7 @@
   font-size: var(--font-size-medium);
   font-weight: 600;
   color: var(--text-primary);
+  text-transform: uppercase;
 }
 
 .themeCount {
